--- a/Caronae/CaronaeRideCell.xib
+++ b/Caronae/CaronaeRideCell.xib
@@ -9,27 +9,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Ride Cell" rowHeight="93" id="h46-Tw-XO0" customClass="CaronaeRideCell">
-            <rect key="frame" x="0.0" y="0.0" width="449" height="93"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Ride Cell" rowHeight="87" id="h46-Tw-XO0" customClass="CaronaeRideCell">
+            <rect key="frame" x="0.0" y="0.0" width="449" height="87"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h46-Tw-XO0" id="N9U-VB-hra">
-                <rect key="frame" x="0.0" y="0.0" width="416" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="416" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FREGUESIA → CT" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWN-UA-DTI" userLabel="Description">
-                        <rect key="frame" x="348" y="13" width="45" height="51"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 vagas" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaW-GQ-xGL" userLabel="Slots">
-                        <rect key="frame" x="348" y="83" width="45" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bLW-pS-2uv" userLabel="Info">
+                        <rect key="frame" x="98" y="18" width="315" height="51"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FREGUESIA → CT" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWN-UA-DTI" userLabel="Description">
+                                <rect key="frame" x="0.0" y="0.0" width="315" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chegando às 16:45 | 03/11" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2br-U4-dn5" userLabel="Date">
+                                <rect key="frame" x="0.0" y="19" width="315" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 vagas" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaW-GQ-xGL" userLabel="Slots">
+                                <rect key="frame" x="0.0" y="36" width="315" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fWN-UA-DTI" secondAttribute="trailing" id="0kd-Ec-0lo"/>
+                            <constraint firstItem="2br-U4-dn5" firstAttribute="top" secondItem="fWN-UA-DTI" secondAttribute="bottom" constant="2" id="7Ec-mh-9Ps"/>
+                            <constraint firstItem="qaW-GQ-xGL" firstAttribute="leading" secondItem="bLW-pS-2uv" secondAttribute="leading" id="Ho3-4g-ab3"/>
+                            <constraint firstItem="fWN-UA-DTI" firstAttribute="leading" secondItem="bLW-pS-2uv" secondAttribute="leading" id="MEA-KN-SwW"/>
+                            <constraint firstItem="2br-U4-dn5" firstAttribute="leading" secondItem="bLW-pS-2uv" secondAttribute="leading" id="UjF-ZV-6Ke"/>
+                            <constraint firstItem="qaW-GQ-xGL" firstAttribute="top" secondItem="2br-U4-dn5" secondAttribute="bottom" constant="2" id="VLZ-0n-rD6"/>
+                            <constraint firstAttribute="bottom" secondItem="qaW-GQ-xGL" secondAttribute="bottom" id="VmW-ny-Z4R"/>
+                            <constraint firstItem="fWN-UA-DTI" firstAttribute="top" secondItem="bLW-pS-2uv" secondAttribute="top" id="ihP-bk-jn8"/>
+                            <constraint firstAttribute="trailing" secondItem="2br-U4-dn5" secondAttribute="trailing" id="pd6-Z1-Eqs"/>
+                            <constraint firstAttribute="trailing" secondItem="qaW-GQ-xGL" secondAttribute="trailing" id="wli-X0-LdY"/>
+                        </constraints>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile Picture" translatesAutoresizingMaskIntoConstraints="NO" id="yhy-4r-phG" userLabel="Driver photo">
-                        <rect key="frame" x="23" y="13" width="310" height="310"/>
+                        <rect key="frame" x="23" y="13" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="eFq-SE-vLr"/>
                         </constraints>
@@ -46,36 +70,25 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chegando às 16:45 | 03/11" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2br-U4-dn5" userLabel="Date">
-                        <rect key="frame" x="348" y="66" width="45" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="yhy-4r-phG" firstAttribute="top" secondItem="N9U-VB-hra" secondAttribute="topMargin" constant="5" id="3GV-Xb-qgT"/>
-                    <constraint firstItem="2br-U4-dn5" firstAttribute="top" secondItem="fWN-UA-DTI" secondAttribute="bottom" constant="2" id="4fl-AD-vlR"/>
                     <constraint firstItem="yhy-4r-phG" firstAttribute="leading" secondItem="N9U-VB-hra" secondAttribute="leadingMargin" constant="15" id="FQY-PI-bbJ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="yhy-4r-phG" secondAttribute="bottom" constant="5" id="Ibd-4U-nFX"/>
-                    <constraint firstItem="2br-U4-dn5" firstAttribute="leading" secondItem="fWN-UA-DTI" secondAttribute="leading" id="Lso-h8-v0S"/>
-                    <constraint firstItem="qaW-GQ-xGL" firstAttribute="leading" secondItem="fWN-UA-DTI" secondAttribute="leading" id="Vbg-WO-Mol"/>
-                    <constraint firstItem="fWN-UA-DTI" firstAttribute="leading" secondItem="yhy-4r-phG" secondAttribute="trailing" constant="15" id="XxF-EX-rNX"/>
-                    <constraint firstItem="2br-U4-dn5" firstAttribute="width" secondItem="fWN-UA-DTI" secondAttribute="width" id="aU7-Hu-Kpb"/>
-                    <constraint firstItem="qaW-GQ-xGL" firstAttribute="width" secondItem="fWN-UA-DTI" secondAttribute="width" id="ddB-GF-4zE"/>
-                    <constraint firstItem="fWN-UA-DTI" firstAttribute="top" secondItem="yhy-4r-phG" secondAttribute="top" id="iEc-fV-uEr"/>
-                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="fWN-UA-DTI" secondAttribute="trailing" constant="15" id="oQz-pv-YbD"/>
+                    <constraint firstItem="yhy-4r-phG" firstAttribute="centerY" secondItem="N9U-VB-hra" secondAttribute="centerY" id="HfE-B6-yCz"/>
+                    <constraint firstItem="bLW-pS-2uv" firstAttribute="centerY" secondItem="yhy-4r-phG" secondAttribute="centerY" id="am1-FT-aOn"/>
+                    <constraint firstItem="bLW-pS-2uv" firstAttribute="leading" secondItem="yhy-4r-phG" secondAttribute="trailing" constant="15" id="c3b-kN-4oj"/>
                     <constraint firstItem="yhy-4r-phG" firstAttribute="width" secondItem="yhy-4r-phG" secondAttribute="height" multiplier="1:1" id="xhV-bg-6X0"/>
-                    <constraint firstItem="qaW-GQ-xGL" firstAttribute="top" secondItem="2br-U4-dn5" secondAttribute="bottom" constant="2" id="zLm-jH-KTz"/>
                 </constraints>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="bLW-pS-2uv" secondAttribute="trailing" constant="36" id="lzi-GJ-vay"/>
+            </constraints>
             <connections>
                 <outlet property="arrivalDateTimeLabel" destination="2br-U4-dn5" id="ITd-qo-zn4"/>
                 <outlet property="photo" destination="yhy-4r-phG" id="oZ3-zM-gSM"/>
                 <outlet property="slotsLabel" destination="qaW-GQ-xGL" id="RIo-vd-88u"/>
                 <outlet property="titleLabel" destination="fWN-UA-DTI" id="GMN-BP-W02"/>
             </connections>
-            <point key="canvasLocation" x="319.5" y="234.5"/>
+            <point key="canvasLocation" x="319.5" y="231.5"/>
         </tableViewCell>
     </objects>
     <resources>
